--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <input type="range" name="height" id="height" min="0" max="200">
         <label for="width">width</label>
         <input type="range" name="width" id="width" min="0" max="600">
-        <label for="border">border</label>
+        <label for="border">border (exemplos: none, solid, dotted)</label>
         <input type="text" name="border" id="border">
         <label for="borderRadius">border-radius</label>
         <input type="range" name="borderRadius" id="borderRadius" min="0" max="20">
@@ -41,6 +41,7 @@
     </section>
     <section class="resultado">
       <button class="btn">Button</button>
+      <h1 id="h1-resultado">Código CSS para o botão acima:</h1>
       <pre><code class="css"></code></pre>
     </section>
   </main>
