--- a/index.html
+++ b/index.html
@@ -25,8 +25,13 @@
         <input type="range" name="height" id="height" min="0" max="200">
         <label for="width">width</label>
         <input type="range" name="width" id="width" min="0" max="600">
-        <label for="border">border (exemplos: none, solid, dotted)</label>
-        <input type="text" name="border" id="border">
+        <label for="border">border</label>
+        <select name="border" id="border">
+          <option value="none">none</option>
+          <option value="solid">solid</option>
+          <option value="dashed">dashed</option>
+        </select>
+        <input type="border" name="border" id="border">
         <label for="borderRadius">border-radius</label>
         <input type="range" name="borderRadius" id="borderRadius" min="0" max="20">
         <label for="fontFamily">font-family</label>
