--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
           <option value="none">none</option>
           <option value="solid">solid</option>
           <option value="dashed">dashed</option>
+          <option value="dotted">dotted</option>
         </select>
         <label for="borderRadius">border-radius</label>
         <input type="range" name="borderRadius" id="borderRadius" min="0" max="20">
@@ -41,6 +42,7 @@
         </select>
         <label for="fontSize">font-size</label>
         <input type="number" name="fontSize" id="fontSize">
+        <button onclick="resetStorage()" class="btn-reset">Reset</button>
       </form>
     </section>
     <section class="resultado">
