--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
         </select>
         <label for="fontSize">font-size</label>
         <input type="number" name="fontSize" id="fontSize">
+        <button onclick="resetStorage()" class="btn-reset">Reset</button>
       </form>
     </section>
     <section class="resultado">
